# cpprestsdk

./: .gitignore
Release/: CMakeLists.txt  xilinx-toolchain.cmake
Release/samples/BingRequest/BingRequest120/: BingRequest120.vcxproj
Release/samples/BingRequest/BingRequest120.xp/: BingRequest120.xp.vcxproj
Release/samples/BlackJack/BlackJack_Client/BlackJack_Client120/: BlackJack_Client120.vcxproj
Release/samples/BlackJack/BlackJack_Server/BlackJack_Server120/: BlackJack_Server120.vcxproj
Release/samples/BlackJack/BlackJack_UIClient/: BlackJack_UIClient120.vcxproj
Release/samples/CasaLens/CasaLens120/: CasaLens120.vcxproj
Release/samples/SearchFile/SearchFile120/: SearchFile120.vcxproj
Release/src/: CMakeLists.txt
Release/tests/functional/websockets/utilities/vs14/: packages.config
